<resources>
    <string name="app_name">Bakery Calculator</string>
    <string name="home">Home</string>
    <string name="calculate_price">Calculate pastry cost</string>
    <string name="estimate">Estimate</string>
    <string name="calculate_pastry">Calculate pastry</string>
    <string name="personalize">Personalize</string>
    <string name="add_pastry">Enter pastry</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_number">Enter number</string>
    <string name="pastry_shop">Bakery</string>
    <string name="pastry">PASTRY</string>
    <string name="type">TYPE</string>
    <string name="hint">0.0</string>
    <string name="price">Price</string>
    <string name="number">Number</string>
    <string name="total">Total</string>
    <string name="save">Save</string>

    <string name="expenses_per_month">Monthly expenses</string>
    <string name="expenses_per_day">Daily expenses</string>
    <string name="ingredients_per_100">Ingredients for 100 pastries</string>
    <string name="ingredients_for_1">Ingredients for 1 pastry</string>
    <string name="adding_expenses">Sum of expenses</string>
    <string name="price_for_1">Cost of 1</string>
    <string name="one">one</string>
    <string name="here_you_can">Here you can estimate the cost of one pastry</string>
    <string name="enter_monthly_expenses">Enter all monthly expenses</string>
    <string name="rent_etc">Rent/Electric/Water/salaries etc</string>
    <string name="enter_materials">Enter cost of ingredients used - flour/oil/cheese etc </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="approximate_price_100">Estimated cost of 100 pastries</string>
    <string name="workdays">Workdays</string>
    <string name="how_many_workdays">How many workdays per month?</string>
    <string name="how_many_pastries">How many pastries do you make per day?</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>

    <string name="calculated_price">Calculated cost of one pastry</string>
    <string name="currency"></string>
    <string name="thank_you">Thanks</string>
    <string name="todays_total">Today\'s total: </string>
    <string name="cleared">Cleared</string>
    <string name="enter_new_pastry">Enter new pastry:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter </string>
    <string name="of">of</string>

</resources>
