<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">


    <FrameLayout
        android:id="@+id/placeNameHolder"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:transitionName="tNameHolder"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/dark_green"
            android:tag="@string/pastry"
            android:hint="@string/type"
            android:padding="5dp"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:id="@+id/zakuska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans" />

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:tag="Цена"
            android:padding="5dp"
            android:textSize="14sp"
            android:hint="@string/hint"
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:layout_gravity="left|bottom" />

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"
            android:textSize="14sp"
            android:hint="@string/hint"
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="sans"
            android:layout_gravity="right|bottom" />

        <TextView
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical" />
        <TextView
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical" />

        <TextView
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical" />

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:tag="@string/number"
            android:padding="5dp"
            android:textSize="14sp"
            android:hint="0бр"
            android:id="@+id/quantity"
            android:typeface="sans"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

</android.support.v7.widget.CardView>